edit candidate
